--- a/application/Index/View/Run/edit.html
+++ b/application/Index/View/Run/edit.html
@@ -1,4 +1,5 @@
-<extend name="Public/base" />
+
+{include file='Public/base' /}
 
 <block name="title">
     <title>流程设计器 实例演示 Flowdesign.leipi.org</title>
@@ -27,13 +28,13 @@
 <div class="row">
     <ol class="breadcrumb">
         <li><a href="/">流程设计器</a> <span class="divider">/</span></li>
-        <li><a href="{:U('/demo')}">实例</a> <span class="divider">/</span></li>
+        <li><a href="{:url('/demo')}">实例</a> <span class="divider">/</span></li>
         <li class="active"><if condition="empty($run_process)">发起<else/>办理</if></li>
     </ol>
 </div>
 
 <div class="row">
-<form action="{:U('/run/edit_save')}" method="post">
+<form action="{:url('/index/run/edit_save')}" method="post">
 <input type="hidden" value="{$run_process.id}" name="run_process">
 
 <p>
