--- a/application/Index/View/pub/base.html
+++ b/application/Index/View/pub/base.html
@@ -29,6 +29,6 @@
 <script type="text/javascript" src="__LIB__/Validform/5.3.2/Validform.min.js"></script>
 <script type="text/javascript" src="__HUIADMIN__/common.js"></script>
 <script type="text/javascript" src="__LIB__/laydate5.0.9/laydate.js"></script>
-<title>PMS</title>
+<title>Tpflow</title>
 </head>
 <body>
