--- a/application/Index/View/flow/start.html
+++ b/application/Index/View/flow/start.html
@@ -42,7 +42,7 @@
 			<td colspan='2' class='text-c'>
 			
 			<button  class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
-				<button  class="btn btn-default radius" type="button" onclick="layer_close()">&nbsp;&nbsp;取消&nbsp;&nbsp;</button></td>、
+				<button  class="btn btn-default radius" type="button" onclick="layer_close()">&nbsp;&nbsp;取消&nbsp;&nbsp;</button></td>
 			</tr>
 		</table>
 		
@@ -57,13 +57,6 @@
 
 <script type="text/javascript">
 $(function(){
-	$("[name='new_top'][value='{$info.new_top ?? ''}']").attr("checked",true);
-	$("[name='new_type']").find("[value='{$info.new_type ?? '0'}']").attr("selected",true);
-	$('.skin-minimal input').iCheck({
-		checkboxClass: 'icheckbox-blue',
-		radioClass: 'iradio-blue',
-		increaseArea: '20%'
-	});
 	
 	$("#form").Validform({
             tiptype:2,
