数据库更新，审批流修正部分

--- a/application/Index/View/Flowdesign/attribute.html
+++ b/application/Index/View/Flowdesign/attribute.html
@@ -318,6 +318,7 @@
         <td>
             <select id="field_@a" class="input-medium">
               <option value="">选择字段</option>
+			  <option value="new_type">new_type</option>
               <!-- 表单字段 start -->
              
               <!-- 表单字段 end -->  
