1、优化工作流表结构；2，工作流新增完善；3、工作流转出条件；4、删除部分不相关代码。

--- a/application/Index/View/Flowdesign/index.html
+++ b/application/Index/View/Flowdesign/index.html
@@ -29,7 +29,7 @@
 
       <div class="nav-collapse collapse">
         <ul class="nav">
-            <li><a href="javascript:void(0);">正在设计【111】</a></li>
+            <li><a href="javascript:void(0);">正在设计【{$one.flow_name}】</a></li>
         </ul>
       </div>
       
