--- a/application/Index/View/Flowdesign/attribute.html
+++ b/application/Index/View/Flowdesign/attribute.html
@@ -318,7 +318,9 @@
         <td>
             <select id="field_@a" class="input-medium">
               <option value="">选择字段</option>
-			  <option value="new_type">new_type</option>
+			  {volist name='from' id='v'}
+			  <option value="{$key}">{$v}</option>
+			  {/volist}
               <!-- 表单字段 start -->
              
               <!-- 表单字段 end -->  
