回退功能完成，表结构调整，删除部分无用字段，本次更新需要重新建立数据库。

--- a/application/Index/View/news/add.html
+++ b/application/Index/View/news/add.html
@@ -4,6 +4,7 @@
 		{present name="info.id"}
 			<form action="{:url('edit')}" method="post" name="form" id="form">
 			<input type="hidden" name="id" value="{$info.id}">
+			<input type="hidden" name="status" value="0">
 		{else /}
 			<form action="{:url('add')}" method="post" name="form" id="form">
 		{/present}
