--- a/application/Index/View/flow/do_check.html
+++ b/application/Index/View/flow/do_check.html
@@ -23,16 +23,33 @@
 				<th style='width:30px'>审批意见</th>
 				<th><textarea name='check_con'  datatype="*" style="width:100%;height:55px;"></textarea> </th>
 				</tr>
-				<tr>
-				<th style='width:30px'>下一步骤</th>
+				<tr id='nex_process'>
+				<th style='width:30px' >下一步骤</th>
 				<th>{$flowinfo['nexprocess']['process_name']}</th>
+				</tr>
+				<tr style='display:none' id='back_process'>
+				<th style='width:30px'>回退步骤</th>
+				<th>
+					<span class="select-box">
+					<select name="wf_backflow" id='backflow'  class="select"  datatype="*" >
+					<option value="">请选择回退步骤</option>
+					{volist name='$flowinfo.preprocess' id='back'}
+					<option value="{$key}">{$back}</option>
+					{/volist}
+					</select>
+				</span>
+				</th>
+				</tr>
+				<tr style='display:none' id='sing_process'>
+				<th style='width:30px'>回退步骤</th>
+				<th></th>
 				</tr>
 				<tr>
 				<td colspan=2 class='text-c'>
 				<input id='submit_to_save' name='submit_to_save' value='' type='hidden'>
-				<a class="btn btn-primary radius" onclick='tj("ok")' >提交</a> 
-				<a class="btn btn-primary radius" onclick='tj("back")'value='back' >回退</a> 
-				<a class="btn btn-primary radius" onclick='tj("sing")' value='sing' >会签</a>
+				<a class="btn btn-primary radius" id='nexbton' onclick='tj("ok")' >提交</a> 
+				<a class="btn btn-primary radius" id='backbton' onclick='tj("back")'value='back' >回退</a> 
+				<a class="btn btn-primary radius" id='singbton' onclick='tj("sing")' value='sing' >会签</a>
 				</td>
 				</tr>
 				</table>
@@ -68,6 +85,21 @@ $(function(){
 	 
 });
 function tj(value){
+	if(value =='back'){
+		$('#nex_process').hide();//
+		$('#nexbton').hide();
+		$('#singbton').hide();
+		$('#backbton').html('确认回退');
+		$('#back_process').show();
+		var select = $('#backflow option:selected').val();
+		if(select==''){
+			layer.msg('请选择回退步骤');
+			return false;
+		}
+	}
+	if(value =='ok'){
+		$("#backflow").removeAttr("datatype");
+	}
 	$('#submit_to_save').val(value);
 	$('#forms').submit();
 } 
