完成模拟角色，模拟用户，用户监控，调整日志记录，需要更新数据库

--- a/application/Index/View/flow/start.html
+++ b/application/Index/View/flow/start.html
@@ -36,7 +36,7 @@
 			</tr>
 			<tr>
 			<td>审核意见：</td><td>
-				<input type="text" class="input-text" value="{$info.new_title ?? ''}" name="new_title"  datatype="*" >
+				<input type="text" class="input-text" value="{$info.new_title ?? ''}" name="check_con"  datatype="*" >
 			</td>
 			</tr>
 			<tr>
