--- a/application/Index/View/Flowdesign/super_dialog.html
+++ b/application/Index/View/Flowdesign/super_dialog.html
@@ -1,21 +1,20 @@
 <extend name="Public/base_modal" />
-
 <block name="head">
-<link href="__PUBLIC__/css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="/static/work/css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
 <!--[if lte IE 6]>
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/css/bootstrap/css/bootstrap-ie6.css">
+<link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/bootstrap-ie6.css">
 <![endif]-->
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/css/bootstrap/css/ie.css">
+<link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/ie.css">
 <![endif]-->
 <!--select 2-->
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/js/jquery.multiselect2side/css/jquery.multiselect2side.css" media="screen" />
-<link href="__PUBLIC__/css/site.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="/static/work/js/jquery.multiselect2side/css/jquery.multiselect2side.css" media="screen" />
+<link href="/static/work/css/site.css" rel="stylesheet" type="text/css" />
 
-<script type="text/javascript" src="__PUBLIC__/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="__PUBLIC__/css/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/static/work/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/static/work/css/bootstrap/js/bootstrap.min.js"></script>
 <!--select 2-->
-<script type="text/javascript" src="__PUBLIC__/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
+<script type="text/javascript" src="/static/work/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
 
 <script type="text/javascript">
     var _root='',_controller = '';
@@ -62,18 +61,17 @@
         <p>部门筛选</p>
         <select name="" multiple="multiple" size="18" style="width: 180px;">
             <option value="">全部部门</option>
-            <option value="">&nbsp;&nbsp;&nbsp;&nbsp;|-PHP部</option>
-            <option value="">&nbsp;&nbsp;&nbsp;&nbsp;|-JAVA部</option>
-            <option value="">&nbsp;&nbsp;&nbsp;&nbsp;|-NET部</option>
-            <option value="">&nbsp;&nbsp;&nbsp;&nbsp;|-C部</option>
+			{volist name='role' id='k'}
+            <option value="{$k.id}">&nbsp;&nbsp;&nbsp;&nbsp;|-{$k.name}</option>
+			{/volist}
         </select>
     </div>
-    <div class="span6">
+    <div class="span6"><!-- selected="selected" -->
         <select name="dialog_searchable" id="dialog_searchable" multiple="multiple" style="display:none;">
             <option value="all">【全部】</option>
-            <option value="10" selected="selected">测试1</option>
-            <option value="11">测试2</option>
-            <option value="12">测试3</option>
+			{volist name='user' id='k'}
+            <option value="{$k.id}" >{$k.username}</option>
+			{/volist}
         </select>
     </div>
 </div>
@@ -83,20 +81,12 @@
     <button class="btn" type="button" id="dialog_close">取消</button>
 </div>
 <div  class="pull-left offset2">
-    <input type="radio" <if condition="$op eq 'user'">checked="checked"</if>>用户
-    <input type="radio" <if condition="$op eq 'dept'">checked="checked"</if>>部门
-    <input type="radio" <if condition="$op eq 'role'">checked="checked"</if>>角色
+    <input type="radio" {if condition="$op eq 'user'"}checked="checked"{/if}>用户
+    <input type="radio" {if condition="$op eq 'role'"}checked="checked"{/if}>角色
 </div>
 
 </div>
 </div><!--end container-->
-
-
-
-</block><!--end body-->
-
-<block name="footer_js">
-
 <script type="text/javascript">
     $(function(){
           $('#dialog_searchable').multiselect2side({
@@ -109,7 +99,6 @@
         });
         //搜索用户
         $("#dialog_search").on("submit",function(){
-            
             //ajax data
             var data = [{"vlaue":"100","text":"搜索1"},{"vlaue":"101","text":"搜索2"}];//test
             
@@ -156,8 +145,6 @@
             }
             //这里不用 json了，数据库 也是用 , 号隔开保存的
             //var jsonText = JSON.stringify(nameText) + JSON.stringify(idText);
-
-            
             if(window.ActiveXObject){ //IE  
                 window.returnValue = globalValue
             }else{ //非IE  
@@ -166,8 +153,6 @@
                 }
             }  
             window.close();
-            
-            
         });
         $("#dialog_close").on("click",function(){
             window.close();
