--- a/application/Index/View/flow/do_check.html
+++ b/application/Index/View/flow/do_check.html
@@ -6,8 +6,9 @@
 <input type="hidden" value="{$info.wf_fid}" name="wf_fid">
 <input type="hidden" value="{$info.wf_type}" name="wf_type">
 <input type="hidden" value="{$flowinfo.flow_id}" name="flow_id">
-<input type="hidden" value="{$flowinfo.run_flow_process}" name="run_flow_process">
+<input type="hidden" value="{$flowinfo.flow_process}" name="flow_process">
 <input type="hidden" value="{$flowinfo.run_id}" name="run_id">
+<input type="hidden" value="{$flowinfo.run_process}" name="run_process">
 <input type="hidden" value="{$flowinfo['nexprocess']['id']}" name="npid">
 		<table class="table table-border table-bordered table-bg" style='width:98%'>
 			<thead>
