--- a/application/Index/View/user/index.html
+++ b/application/Index/View/user/index.html
@@ -1,7 +1,7 @@
 {include file='pub/base' /}
 <nav class="breadcrumb">
 <i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a href="{:url('index/index')}"  class="btn btn-primary radius"> 返回</a>
+<a href="{:url('index/welcome')}"  class="btn btn-primary radius"> 返回</a>
 <a onclick="layer_show('新增管理员','{:url('add')}','850','500')" class="btn btn-primary radius">
 	<i class="Hui-iconfont">&#xe600;</i> 添加管理员</a>
 </nav>
