--- a/application/Index/View/user/role.html
+++ b/application/Index/View/user/role.html
@@ -1,7 +1,7 @@
 {include file='pub/base' /}
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 
 <i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a href="{:url('index/index')}"  class="btn btn-primary radius"> 返回</a>
+<a href="{:url('index/welcome')}"  class="btn btn-primary radius"> 返回</a>
 <a class="btn btn-primary radius" href="javascript:;" onclick="layer_show('添加角色','{:url('addrole')}','800','400')">
 	<i class="Hui-iconfont">&#xe600;</i> 添加角色</a>
 </nav>
