--- a/application/Index/View/flow/index.html
+++ b/application/Index/View/flow/index.html
@@ -1,6 +1,6 @@
 {include file='pub/base' /}
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a href="{:url('index/index')}"  class="btn btn-primary radius"> 返回</a>
+<a href="{:url('index/welcome')}"  class="btn btn-primary radius"> 返回</a>
 </nav>
 <div class="page-container">
 	<table class="table table-border table-bordered table-bg">
