--- a/application/Index/View/news/index.html
+++ b/application/Index/View/news/index.html
@@ -1,6 +1,6 @@
 {include file='pub/base' /}
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a href="{:url('index/index')}"  class="btn btn-primary radius"> 返回</a>
+<a href="{:url('index/welcome')}"  class="btn btn-primary radius"> 返回</a>
 
 <a href="javascript:;" onclick="layer_show('新增新闻','{:url('add')}','850','500')" class="btn btn-primary radius">
 	<i class="Hui-iconfont">&#xe600;</i> 新增新闻</a></nav>
@@ -28,11 +28,13 @@
 				{/eq}{$k.new_title}</td>
 				<td>{$k.add_time|date='Y-m-d H:i'}</td>
 				<td>
+				<!--获取流状态-->
 				{:action('flow/status',['status'=>$k.status])}
 				</td>
 				<td class="td-manage">
 				<div class="btn-group">
 					<span class="btn  radius size-S" data-title="查看" data-href="{:url('view',['id'=>$k.id])}" onclick="Hui_admin_tab(this)"><i class="Hui-iconfont">查看</span>
+						<!--按钮权限验证，审批权限验证，发起验证-->
 						{:action('flow/btn',['wf_fid'=>$k.id,'wf_type'=>'news','status'=>$k.status])}
 					<span class="btn  radius size-S" onclick="layer_show('修改','{:url('edit',['id'=>$k.id])}','850','500')">修改</span>
 				</div>
