--- a/application/Index/View/index/index.html
+++ b/application/Index/View/index/index.html
@@ -37,7 +37,7 @@
 			<dl>
 				<dt><i class="Hui-iconfont"></i> 表单自定义设计<i class="Hui-iconfont menu_dropdown-arrow"></i></dt>
 				<dd style="display: block;"><ul>
-				<li><span style='line-height: 32px;padding-left: 26px;border-bottom: none;font-weight: normal;' onclick='layer.msg("开发中！")'>表单设计</span></li>
+				<li><a data-href="{:url('Fromdesign/index')}" data-title="工作流列表" href="javascript:void(0)">表单设计</a></li>
 				</dd>
 			</dl>
 			<dl>
