--- a/application/Index/View/Formdesign/index.html
+++ b/application/Index/View/Formdesign/index.html
@@ -31,7 +31,7 @@
 				<div class="btn-group">
 					<span class="btn  radius size-S" data-title="查看" data-href="{:url('view',['id'=>$k.id])}" onclick="Hui_admin_tab(this)"><i class="Hui-iconfont">查看</span>
 					<span  onclick="layer_show('新增函数','{:url('functions',['id'=>$k.id])}','850','500')" class="btn  radius size-S">新增函数</span>
-					<span  onclick="layer_show('表单设计','{:url('desc')}','850','500')" class="btn  radius size-S">表单设计</span>
+					<span  onclick="layer_show('表单设计','{:url('desc',['id'=>$k.id])}','950','500')" class="btn  radius size-S">表单设计</span>
 					<span class="btn  radius size-S" onclick="layer_show('修改','{:url('edit',['id'=>$k.id])}','850','500')">修改</span>
 				</div>
 				</td>
