--- a/application/Index/View/index/index.html
+++ b/application/Index/View/index/index.html
@@ -28,6 +28,13 @@
 				</dd>
 				</dl>
 			<dl>
+			<dl>
+				<dt><i class="Hui-iconfont"></i> test<i class="Hui-iconfont menu_dropdown-arrow"></i></dt>
+				<dd style="display: block;"><ul>
+				<li><a data-href="{:url('test/index')}" data-title="test" href="javascript:void(0)">test</a></li>
+				</dd>
+				</dl>
+			<dl>
 				<dt><i class="Hui-iconfont"></i> 用户管理<i class="Hui-iconfont menu_dropdown-arrow"></i></dt>
 				<dd style="display: block;"><ul>
 				<li><a data-href="{:url('user/index')}" data-title="用户列表" href="javascript:void(0)">用户列表</a></li>
