--- a/application/Index/view/test/edit.html
+++ b/application/Index/view/test/edit.html
@@ -14,10 +14,10 @@
 </div>
 {/block}
 {block name="script"}
-<script type="text/javascript" src="__LIB__/Validform/5.3.2/Validform.min.js"></script>[SCRIPT]
+<script type="text/javascript" src="__LIB__/Validform/5.3.2/Validform.min.js"></script>
 <script>
     $(function () {
-[SET_VALUE]
+
 
         $('.skin-minimal input').iCheck({
             checkboxClass: 'icheckbox-blue',
