--- a/application/Index/View/Formdesign/index.html
+++ b/application/Index/View/Formdesign/index.html
@@ -33,6 +33,11 @@
 					<span  onclick="layer_show('新增函数','{:url('functions',['id'=>$k.id])}','850','500')" class="btn  radius size-S">新增函数</span>
 					<span  onclick="layer_show('表单设计','{:url('desc',['id'=>$k.id])}','950','500')" class="btn  radius size-S">表单设计</span>
 					<span class="btn  radius size-S" onclick="layer_show('修改','{:url('edit',['id'=>$k.id])}','850','500')">修改</span>
+					{if condition='$k.status == 0'}
+					<a class="btn  radius size-S" href="{:url('shengcheng',['id'=>$k.id])}">生成</a>
+					{else/}
+					已生成
+					{/if}
 				</div>
 				</td>
 			</tr>
